# scout-cli

./: .app_root.migrated  .dockerignore  .env  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  7e192ba6-af0e-4dec-a25e-3b412a73ca76.cer  =7  COMPOSE_STRATEGY.md  Dockerfile  Etherscan  MIGRATION.md  Makefile  QuantumAI-Dockerized-System  README.md  SKILL.md  SYSTEM_USER_GUIDE.md  activate.sh  app.py  append-safe.sh  bootstrap.sh  build_pkg.sh  colima_docker_restart.sh  compose.debug.yaml  compose.master.yml  compose.override.yml  compose.yml  compose.yml.broken.1755607114  configd.txt  constraints.txt  container-fix-speed.sh  deploy.sh  docker-compose.base.yml  docker-compose.override.yml  docker-compose.usdt.yml  docker-compose.yml  dockerdeneme.sh  entrypoint.sh  env.example  (+46 more)
 quantumai-usdt-v2/: .dockerignore  Dockerfile  app.py  main.py  nginx.conf  requirements.txt  supervisord.conf
.deploy/: Dockerfile  docker-compose.yml  nginx.conf  supervisord.conf  wsgi.py
.devcontainer/: devcontainer.json  docker-compose.yml
.githooks/: pre-push
.qai.disabled/: brlct_monitor.py  brlct_repair_all.sh  docker_watcher.py  fuel_health.py  gpt_sync_monitor.py  log_guard.py  qai-bootstrap-wrapper.sh  qai-manage.sh  qai-self-agent.sh
.venv_qai_ai/: pyvenv.cfg
_wheels/: lru_dict-1.2.0-cp311-cp311-macosx_15_0_arm64.whl
ai/: __init__.py
app/: __init__.py
cache/: macro_proxy.parquet  market.parquet  onchain_proxy.parquet  sentiment_proxy.parquet
data/: training_dataset.parquet  training_manifest.json
dex/: Dockerfile  gunicorn.conf.py  main.py  (+1 more)
(+236 files in other folders)
